--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
       rel="stylesheet"
     />
 
-    <title>Covid-Mx</title>
+    <title>COVID-MX</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
